@@ -152,11 +152,13 @@ extern MagickPrivate unsigned char
   *NTResourceToBlob(const char *);
 
 extern MagickPrivate void
-  NTWindowsGenesis(void),
   *NTGetLibrarySymbol(void *,const char *),
+  NTInitializeWinsock(MagickBooleanType),
   *NTMapMemory(char *,size_t,int,int,int,MagickOffsetType),
   *NTOpenLibrary(const char *),
-  NTSeekDirectory(DIR *,ssize_t);
+  NTSeekDirectory(DIR *,ssize_t),
+  NTWindowsGenesis(void),
+  NTWindowsTerminus(void);
 
 #endif /* !XS_VERSION */
 
