@@ -5,6 +5,7 @@
   * Added support for writing 16-bit TGA files (reference
     http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=26693).
   * Improved performance of dds:cluster-fit when OpenMP is enabled.
+  * Added support for distributed pixel cache to the Windows distribution.
 
 2014-12-04  6.9.0-1 Alexey Dolgavin <dolgavin.alexey@gmail...>
   * Fix ImageMagick crashes while read EXIF from TIFF.
